--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,16 +6,24 @@
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
-                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                    <img class="slide-image" src="/images/0000000000.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                    <img class="slide-image" src="/images/0000000001.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                    <img class="slide-image" src="/images/0000000002.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="slide-image" src="/images/0000000003.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="slide-image" src="/images/0000000004.jpg" alt="">
                 </div>
             </div>
             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -147,5 +155,23 @@
         <p>If you like this template, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p>
         <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">View Tutorial</a>
     </div>
+    <div class="R" style="background-color: gray">
+      <% products_HighestPrice.forEach(function(product){  %>
+        <h2><%= product.name %></h2>
+      <% }); %>
+    </div>
+
+    <div class="" style="background-color: green">
+      <% products_FiveMostTimeBidding.forEach(function(product){  %>
+        <h2><%= product.name %></h2>
+      <% }); %>
+    </div>
+
+    <div class="" style="background-color: brown">
+      <% products_FiveNearest.forEach(function(product){  %>
+        <h2><%= product.name %></h2>
+      <% }); %>
+    </div>
+
 
 </div>
