--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,9 +36,10 @@
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/importer.css">
-  <!--STYLES END-->
-  <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/styles/layout.css">
+  <!--STYLES END-->
+
+  <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
 </head>
 
 <body>
@@ -46,30 +47,34 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
+        <p class="pull-left visible-xs">
+          <button id="offcanvasleft" class="btn btn-xs" type="button" data-toggle="offcanvasleft"><i class="glyphicon glyphicon-chevron-left"></i></button>
+        </p>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <form class="navbar-form navbar-right">
+          <input type="text" class="form-control" placeholder="Search..." size="60" style="float:left;">
+        </form>
+        <a class="navbar-brand" href="#">Braveurself</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav" style="float:right;">
           <li>
-            <a href="#">About</a>
+            <a href="#">Product</a>
           </li>
           <li>
-            <a href="#">Services</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
+            <a href="#">Community</a>
           </li>
         </ul>
+
       </div>
       <!-- /.navbar-collapse -->
     </div>
@@ -77,29 +82,30 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container-fluid">
 
-    <div class="row">
-
-      <div class="col-md-3">
-        <p class="lead">Shop Name</p>
-        <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+    <div class="row row-offcanvas row-offcanvas-left">
+      <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebarLeft" role="navigation">
+        <ul class="nav nav-sidebar">
+          <li><a href=""><span>Message</span><span class="glyphicon glyphicon-envelope" style=" float: right;"></span></a></li>
+          <li><a href=""><span>Setting</span><span class="glyphicon glyphicon-cog" style=" float: right;"></span></a></li>
+          <li><a href="login"><span>Login</span><span class="glyphicon glyphicon-log-in" style=" float: right;"></span></a></li>
+          <li><a href="logout"><span>Logout</span><span class="glyphicon glyphicon-log-out" style=" float: right;"></span></a></li>
+          <li><a href="register"><span>Register</span><span class="glyphicon glyphicon-registration-mark" style=" float: right;"></span></a></li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-9">
+        <div class="row">
+          <%-body%>
         </div>
       </div>
-
-      <div class="col-md-9">
-        <%-body%>
-      </div>
-
+      <!--/span-->
     </div>
 
   </div>
   <!-- /.container -->
 
-  <div class="container">
+  <div class="container-fluid">
 
     <hr>
 
@@ -137,7 +143,7 @@
     -->
 
   <!--TEMPLATES-->
-
+  
   <!--TEMPLATES END-->
 
 
@@ -162,13 +168,13 @@
           + Use a different preprocessor, like TypeScript
 
     -->
-
-  <!--SCRIPTS-->
-  <script src="/js/dependencies/sails.io.js"></script>
-
-  <!--SCRIPTS END-->
   <script src="/components/jquery/dist/jquery.js"></script>
   <script src="/components/bootstrap/dist/js/bootstrap.js"></script>
+  <!--SCRIPTS-->
+  <script src="/js/dependencies/sails.io.js"></script>
+  <script src="/js/LeftMenu.js"></script>
+  <!--SCRIPTS END-->
+
 </body>
 
 </html>
