--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -5,7 +5,6 @@
                 Giá cao nhất
                 <div class="glyphicon glyphicon-menu-down"></div>
             </h5>
-
         </a>
         <div id="HighestPrice" class="collapse in carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -216,4 +215,8 @@
             </a>
         </div>
     </div>
+</div>
+<div class="row">
+    <%var id = "/product/" + 1;%>
+        <a href=<%=id%>>link</a>
 </div>
