--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,43 +1,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Login</title>
+  <title>Login</title>
 
-    <link rel="stylesheet" href="/styles/login/login.css">
+  <link rel="stylesheet" href="/styles/login/login.css">
 
-    <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
 </head>
 
 <body>
-
-    <div class="container">
-        <form class="form-signin" action="/user/login" method="POST">
-            <h2 class="form-signin-heading">Please sign in</h2>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input name='emailAddress' type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input name='password' type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-            <div class="checkbox">
-                <label>
+  
+  <div class="container">
+    <form class="form-signin" action="/user/login" method="POST">
+      <% if (flash && flash.error) { %>
+        <div class="alert alert-danger">
+          <%= flash.error %>
+        </div>
+        <% } %>
+          <h2 class="form-signin-heading">Please sign in</h2>
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input name='emailAddress' type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input name='password' type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+          <div class="checkbox">
+            <label>
             <input name='rememberMe' type="checkbox" value="remember-me"> Remember me
           </label>
-            </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
-    </div>
-    <!-- /container -->
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+  </div>
+  <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
 
 </body>
