--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -174,6 +174,7 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/LeftMenu.js"></script>
+    <script src="/js/login/login.js"></script>
     <!--SCRIPTS END-->
 
 </body>
