--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -34,10 +34,10 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="login-form" action="#" method="post" role="form" style="display: block;">
+                                <form id="login-form" action="/user/login" method="post" role="form" style="display: block;">
                                     <div class="form-group">
-                                        <label for="username">Username</label>
-                                        <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                        <label for="email">Email</label>
+                                        <input type="text" name="email" id="email" tabindex="1" class="form-control" placeholder="Email" value="">
                                     </div>
                                     <div class="form-group">
                                         <label for="password">Password</label>
@@ -55,7 +55,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                <form id="register-form" action="#" method="post" role="form" style="display: none;">
+                                <form id="register-form" action="/user/create" method="post" role="form" style="display: none;">
                                     <div class="form-group">
                                         <label for="email">Email</label>
                                         <input type="text" name="email" id="email" tabindex="1" class="form-control" placeholder="Enter your email..." value="">
