--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -90,9 +90,9 @@
                 <ul class="nav nav-sidebar">
                     <li><a href=""><span>Tin nhắn</span><span class="glyphicon glyphicon-envelope" style=" float: right;"></span></a></li>
                     <li><a href=""><span>Cài đặt</span><span class="glyphicon glyphicon-cog" style=" float: right;"></span></a></li>
-                    <li><a href="login"><span>Đăng nhập</span><span class="glyphicon glyphicon-log-in" style=" float: right;"></span></a></li>
-                    <li><a href="logout"><span>Đăng xuất</span><span class="glyphicon glyphicon-log-out" style=" float: right;"></span></a></li>
-                    <li><a href="register"><span>Đăng kí</span><span class="glyphicon glyphicon-registration-mark" style=" float: right;"></span></a></li>
+                    <li><a href="/login"><span>Đăng nhập</span><span class="glyphicon glyphicon-log-in" style=" float: right;"></span></a></li>
+                    <li><a href="/logout"><span>Đăng xuất</span><span class="glyphicon glyphicon-log-out" style=" float: right;"></span></a></li>
+                    <li><a href="/register"><span>Đăng kí</span><span class="glyphicon glyphicon-registration-mark" style=" float: right;"></span></a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-9">
