--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div id="fullscreen_bg" class="fullscreen_bg" />
+    <div id="fullscreen_bg" class="fullscreen_bg"></div>
     <div id="regContainer" class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -23,10 +23,10 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-6">
-                                <a href="#" class="active" id="login-form-link">Login</a>
+                                <a href="" class="active" id="login-form-link">Login</a>
                             </div>
                             <div class="col-xs-6">
-                                <a href="#" id="register-form-link">Register</a>
+                                <a href="" id="register-form-link">Register</a>
                             </div>
                         </div>
                         <hr>
@@ -95,6 +95,7 @@
             </div>
         </div>
     </div>
+
     <!-- /container -->
 
 
