--- a/views/product/info.ejs
+++ b/views/product/info.ejs
@@ -59,8 +59,8 @@
 
         <!-- Botones de compra -->
         <div class="section" style="padding-bottom:20px;">
-            <button class="btn btn-success"><span style="margin-right:20px" class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Ra giá</button>
-            <h6><a href=""><span class="glyphicon glyphicon-heart-empty" style="cursor:pointer;"></span> Yêu thích </a></h6>
+            <button class="btn btn-success"><span style="margin-right:20px" class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Bidding</button>
+            <h6><a href=""><span class="glyphicon glyphicon-heart-empty" style="cursor:pointer;"></span> Favorite </a></h6>
         </div>
     </div>
 </div>
