--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,7 +36,6 @@
 
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/layout.css">
-
     <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -95,7 +94,7 @@
                     <li><a href="/register"><span>Đăng kí</span><span class="glyphicon glyphicon-registration-mark" style=" float: right;"></span></a></li>
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-9">
+            <div class="col-xs-12 col-sm-9" id="content">
                 <div class="row">
                     <%-body%>
                 </div>
@@ -175,6 +174,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/LeftMenu.js"></script>
     <script src="/js/login/login.js"></script>
+    <script src="/js/product/approved.js"></script>
     <!--SCRIPTS END-->
 
 </body>
