user edit profile

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -173,6 +173,7 @@
     <script src="/js/LeftMenu.js"></script>
     <script src="/js/login/login.js"></script>
     <script src="/js/product/approved.js"></script>
+    <script src="/js/user/updateProfile.js"></script>
     <!--SCRIPTS END-->
 
 </body>
