--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,12 +51,12 @@
                     <button id="offcanvasleft" class="btn btn-xs" type="button" data-toggle="offcanvasleft"><i class="glyphicon glyphicon-chevron-left"></i></button>
                 </p>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-                <a class="navbar-brand" href="#">Braveurself</a>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Braveurself</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,11 +65,12 @@
                         <a href="/product">Product</a>
                     </li>
                     <li>
-                        <a href="">Community</a>
+                        <a href="/Community">Community</a>
                     </li>
                     <li>
-                        <form id="search-form" class="navbar-form navbar-right" action="/product/search" method="post" role="form">
-                            <input id="search" type="text" class="form-control" placeholder="Search..." size="50">
+                        <form id="search-form" class="navbar-form navbar-right" action="" method="post" role="form">
+                            <input name="search" type="text" class="form-control" placeholder="Search..." size="50">
+                            <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
                         </form>
                     </li>
                 </ul>
